Adding lint to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,12 @@ jobs:
     - name: Build
       run: make
 
+    - name: Install lint
+      run: make lint-deps
+
+    - name: Run lint
+      run: make lint
+
     - name: Run unit tests
       run: make unit
 
