--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,33 +36,10 @@ jobs:
     - name: Run lint
       run: make lint
 
-    - name: Run tests
+    - name: Run unit tests
+      run: make unit
+
+    - name: Run integration tests
       env:
         TEST_SINGLESTORE_API_KEY: ${{ secrets.TEST_SINGLESTORE_API_KEY }}
-      run: make test
-
-    - name: Go coverage badge # Based on the result of the previous step.
-      uses: tj-actions/coverage-badge-go@v2
-      with:
-        filename: coverage.out
-
-    - name: Verify changed Files
-      uses: tj-actions/verify-changed-files@v12
-      id: verify-changed-files
-      with:
-        files: README.md
-
-    - name: Commit changes
-      if: steps.verify-changed-files.outputs.files_changed == 'true'
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add README.md
-        git commit -m "chore: Updated coverage badge."
-
-    - name: Push changes
-      if: steps.verify-changed-files.outputs.files_changed == 'true'
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ github.token }}
-        branch: ${{ github.head_ref }}
+      run: make integration
