Running tests periodically

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - master
+  schedule:
+    - cron: '0 1 * * *'
+  pull_request:
+    branches:
+      - master
+  workflow_dispatch:
 
 jobs:
   test:
