--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -48,3 +48,6 @@ jobs:
 
     - name: Run unit tests
       run: make unit
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
