--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -23,6 +23,11 @@ jobs:
       with:
         go-version: '1.20'
 
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_wrapper: false
+
     - name: Install make
       run: sudo apt-get install make -y
 
