Adding a format command

--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -45,6 +45,9 @@ jobs:
     - name: Generate
       run: make generate
 
+    - name: Run fmt
+      run: make format
+
     - name: Run gencheck
       run: make gencheck
 
